--- a/BlackBoxToDoList/BlackBoxToDoList/Base.lproj/Main.storyboard
+++ b/BlackBoxToDoList/BlackBoxToDoList/Base.lproj/Main.storyboard
@@ -22,10 +22,10 @@
             </objects>
             <point key="canvasLocation" x="-1337" y="3"/>
         </scene>
-        <!--View Controller-->
+        <!--Start Day View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController storyboardIdentifier="StartSB" id="BYZ-38-t0r" customClass="ViewController" customModule="BlackBoxToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StartSB" id="BYZ-38-t0r" customClass="StartDayViewController" customModule="BlackBoxToDoList" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,6 +54,28 @@
             </objects>
             <point key="canvasLocation" x="-628" y="3"/>
         </scene>
+        <!--Create Task View Controller-->
+        <scene sceneID="N0T-qW-Y2n">
+            <objects>
+                <viewController storyboardIdentifier="CreateTaskSB" id="yV1-H7-xHb" customClass="CreateTaskViewController" customModule="BlackBoxToDoList" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xGd-6o-job">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3eo-lO-niV">
+                                <rect key="frame" x="95" y="662" width="200" height="94"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="7Mn-wY-NFE"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XXF-8g-U62" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-610.76923076923072" y="659.71563981042652"/>
+        </scene>
         <!--Task View Controller-->
         <scene sceneID="UZp-nF-Ukd">
             <objects>
@@ -67,7 +89,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2wJ-uG-f13" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="192" y="3"/>
+            <point key="canvasLocation" x="51" y="3"/>
         </scene>
         <!--Everything Is Done View Controller-->
         <scene sceneID="jnW-We-ufY">
@@ -82,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="o8M-pc-XHQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="917" y="3"/>
+            <point key="canvasLocation" x="714" y="3"/>
         </scene>
     </scenes>
     <resources>
